[gd_scene load_steps=2 format=3 uid="uid://combat_stats_panel"]

[ext_resource type="Script" path="res://scripts/combat_stats_panel.gd" id="1_stats"]

[node name="CombatStatsPanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_stats")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.18, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "‚öîÔ∏è ÊàòÊñóÁªüËÆ°"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DamageDealt" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/DamageDealt"]
layout_mode = 2
text = "ÈÄ†Êàê‰º§ÂÆ≥:"
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsContainer/DamageDealt"]
layout_mode = 2
text = "0"

[node name="DamageTaken" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/DamageTaken"]
layout_mode = 2
text = "ÂèóÂà∞‰º§ÂÆ≥:"
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsContainer/DamageTaken"]
layout_mode = 2
text = "0"

[node name="Hits" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Hits"]
layout_mode = 2
text = "ÂëΩ‰∏≠Ê¨°Êï∞:"
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsContainer/Hits"]
layout_mode = 2
text = "0 / 0"

[node name="Combo" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Combo"]
layout_mode = 2
text = "ËøûÂáª:"
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsContainer/Combo"]
layout_mode = 2
text = "0 (ÊúÄÂ§ß: 0)"

[node name="Time" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Time"]
layout_mode = 2
text = "ÊàòÊñóÊó∂Èó¥:"
size_flags_horizontal = 3

[node name="Value" type="Label" parent="VBoxContainer/StatsContainer/Time"]
layout_mode = 2
text = "0:00"

[node name="BossHPContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BossHPContainer"]
layout_mode = 2
text = "BossË°ÄÈáè:"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="VBoxContainer/BossHPContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPText" type="Label" parent="VBoxContainer/BossHPContainer"]
layout_mode = 2
text = "Boss: 100%"
horizontal_alignment = 1

[node name="AIInfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AIInfo" type="Label" parent="VBoxContainer/AIInfoContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "üß† AIÂàÜÊûê:
‚Ä¢ Ê£ÄÊµãÂà∞: -
‚Ä¢ È¢ÑÊµãÁ≤æÂ∫¶: -%
‚Ä¢ ÈÄÇÂ∫îÊîªÂáª: -"

[node name="CloseBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "ÂÖ≥Èó≠"
